# llm_structured_extract

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
docs/architecture/: company_basic_overview.md  company_core_business.md  company_core_strategy_and_management.md  company_financial_analysis.md  company_founder_and_team.md  company_funding_plan.md  company_industry.md  company_performance_and_valuation.md
llm_structured_extract/: __init__.py
llm_structured_extract/config/: settings.py
llm_structured_extract/core/: __init__.py  exceptions.py  extract.py  parser.py  prompt_engine.py  schema_registry.py
llm_structured_extract/core/llm_adapters/: __init__.py  base_adapter.py  dashscope_adapter.py
llm_structured_extract/models/: company_basic_view.py  company_core_business_view.py  company_core_strategy_and_management.py  company_financial_analysis_view.py  company_founder_and_team_view.py  company_funding_plan.py  company_industry_view.py  company_performance_and_valuation.py
llm_structured_extract/templates/: prompt.j2
llm_structured_extract/templates/examples/: company_extract_example.txt
llm_structured_extract/utils/: generator.py  logger.py  model_visualizer.py  strings.py
llm_structured_extract_service/: main.py  task_models.py  worker.py
outputs/extract_input_md_20260225_165521/parsed_json/: company_basic_view.json  (+6 more)
scripts/: batch_extract.py  generate_models.py  verify_model_structures.py
tests/core/: input_md.md  test_adapter_contract.py  test_markdown_format.py  test_parser_refactored.py  test_prompt_validation.py
(+35 files in other folders)
